fix some chat translations

--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">لم يبدأ الحديث أحد بعد! لم لا تكون أولهم؟</string>
     <string name="chat_public">هذه المحادثة علنية</string>
     <string name="chat_private">هذه المحادثة خاصة</string>
-    <string name="create_chat">إنشاء محادثة جديدة</string>
+    <string name="chat_create">إنشاء محادثة جديدة</string>
     <string name="join_chat">الانضمام للمحادثة</string>
     <string name="single_user_is_typing">%1$s! الصورة! يكتب…</string>
     <string name="multiple_users_are_typing">يجري العديد من المستخدمين الكتابة…</string>
     <string name="alerts_on">إشعارات المحادثة فعالة</string>
     <string name="alerts_off">إشعارات المحادثة مطفأة</string>
     <string name="chat_with_friends_login">الدردشة مع الأصدقاء.</string>
-    <string name="chat_friends_in_chat">الأصدقاء في الدردشة</string>
-    <string name="chat_friend_in_chat">1 صديق في الدردشة</string>
+    <string name="friends_in_chat">الأصدقاء في الدردشة</string>
+    <string name="friend_in_chat">1 صديق في الدردشة</string>
     <string name="chats">المحادثات</string>
     <string name="chats_public">المحادثات العلنية</string>
     <string name="chats_public_search">البحث في المحادثات العلنية</string>
