--- a/SportsSideKick/app/src/main/res/values-bh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-bh/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">এখনও কেউ চ্যাট করতে শুরু করেনি! প্রথম হিসাবে আপনিই শুরু করুন না কেন?</string>
     <string name="chat_public">এই চ্যাটটি পাবলিক</string>
     <string name="chat_private">এই চ্যাটটি প্রাউভেট</string>
-    <string name="create_chat">একটি নতুন চ্যাট তৈরি করুন</string>
+    <string name="chat_create">একটি নতুন চ্যাট তৈরি করুন</string>
     <string name="join_chat">অনুসরণ বন্ধ করুন</string>
     <string name="single_user_is_typing">%1$s! এর! টাইপ করছে…</string>
     <string name="multiple_users_are_typing">একাধিক ব্যবহারকারী টাইপ করছেন…</string>
     <string name="alerts_on">চ্যাট বিজ্ঞপ্তি চালু</string>
     <string name="alerts_off">চ্যাট বিজ্ঞপ্তি বন্ধ</string>
     <string name="chat_with_friends_login">বন্ধুদের সাথে কথা বলি.</string>
-    <string name="chat_friends_in_chat">চ্যাট মধ্যে বন্ধু</string>
-    <string name="chat_friend_in_chat">1 বন্ধু চ্যাট</string>
+    <string name="friends_in_chat">চ্যাট মধ্যে বন্ধু</string>
+    <string name="friend_in_chat">1 বন্ধু চ্যাট</string>
     <string name="chats">চ্যাটগুলি</string>
     <string name="chats_public">পাবলিক চ্যাটগুলি</string>
     <string name="chats_public_search">পাবলিক চ্যাট সন্ধান করুন</string>
