--- a/SportsSideKick/app/src/main/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-de/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">Bisher chattet noch niemand! Fang du doch an!</string>
     <string name="chat_public">Dieser Chat ist ÖFFENTLICH</string>
     <string name="chat_private">Dieser Chat ist PRIVAT</string>
-    <string name="create_chat">Neuen Chat erstellen</string>
+    <string name="chat_create">Neuen Chat erstellen</string>
     <string name="join_chat">Chat beitreten</string>
     <string name="single_user_is_typing">%1$s! is aan het typen…</string>
     <string name="multiple_users_are_typing">Meerdere gebruikers typen…</string>
     <string name="alerts_on">Chat-Alarm EIN</string>
     <string name="alerts_off">Chat-Alarm AUS</string>
     <string name="chat_with_friends_login">Chat met vrienden.</string>
-    <string name="chat_friends_in_chat">Vrienden in chat</string>
-    <string name="chat_friend_in_chat">1 vriend in de chat</string>
+    <string name="friends_in_chat">Vrienden in chat</string>
+    <string name="friend_in_chat">1 vriend in de chat</string>
     <string name="chats">Chats</string>
     <string name="chats_public">Öffentliche Chats</string>
     <string name="chats_public_search">Nach öffentlichen Chats suchen</string>
