--- a/SportsSideKick/app/src/main/res/values-es/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-es/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">¡Nadie ha chateado todavía! ¿Por qué no escribes el primer mensaje?</string>
     <string name="chat_public">Este chat es PÚBLICO</string>
     <string name="chat_private">Este chat es PRIVADO</string>
-    <string name="create_chat">Crear un nuevo chat</string>
+    <string name="chat_create">Crear un nuevo chat</string>
     <string name="join_chat">Unirse al chat</string>
     <string name="single_user_is_typing">%1$s! esta escribiendo…</string>
     <string name="multiple_users_are_typing">Múltiples usuarios están escribiendo…</string>
     <string name="alerts_on">Alertas del chat activadas</string>
     <string name="alerts_off">Alertas del chat desactivadas</string>
     <string name="chat_with_friends_login">Chatear con amigos.</string>
-    <string name="chat_friends_in_chat">Amigos en el chat</string>
-    <string name="chat_friend_in_chat">1 amigo en el chat</string>
+    <string name="friends_in_chat">Amigos en el chat</string>
+    <string name="friend_in_chat">1 amigo en el chat</string>
     <string name="chats">Chats</string>
     <string name="chats_public">Chats públicos</string>
     <string name="chats_public_search">Buscar chats públicos</string>
