--- a/SportsSideKick/app/src/main/res/values-fr/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-fr/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">Personne n’a encore commencé à discuter ! Souhaitez-vous être le premier ?</string>
     <string name="chat_public">Cette discussion est PUBLIQUE</string>
     <string name="chat_private">Cette discussion est PRIVÉE</string>
-    <string name="create_chat">Créer une nouvelle discussion</string>
+    <string name="chat_create">Créer une nouvelle discussion</string>
     <string name="join_chat">Rejoindre la discussion</string>
     <string name="single_user_is_typing">%1$s! est en train d’écrire…</string>
     <string name="multiple_users_are_typing">Plusieurs utilisateurs tapent…</string>
     <string name="alerts_on">es alertes de messagerie sont ACTIVÉES</string>
     <string name="alerts_off">Les alertes de messagerie sont DÉSACTIVÉES</string>
     <string name="chat_with_friends_login">Discuter avec des amis.</string>
-    <string name="chat_friends_in_chat">Amis dans le chat</string>
-    <string name="chat_friend_in_chat">1 ami dans le chat</string>
+    <string name="friends_in_chat">Amis dans le chat</string>
+    <string name="friend_in_chat">1 ami dans le chat</string>
     <string name="chats">Discussions</string>
     <string name="chats_public">Discussions publiques</string>
     <string name="chats_public_search">Chercher dans les discussions publiques</string>
