--- a/SportsSideKick/app/src/main/res/values-id/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-id/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">Belum ada seorangpun memulai obrolan! Mengapa tidak jadi yang pertama?</string>
     <string name="chat_public">Obrolan ini UMUM</string>
     <string name="chat_private">Obrolan ini PRIBADI</string>
-    <string name="create_chat">Buat Obrolan Baru</string>
+    <string name="chat_create">Buat Obrolan Baru</string>
     <string name="join_chat">Gabung Obrolan</string>
     <string name="single_user_is_typing">%1$s! sedang mengetik…</string>
     <string name="multiple_users_are_typing">Beberapa pengguna mengetik…</string>
     <string name="alerts_on">Pemberitahuan obrolan AKTIF</string>
     <string name="alerts_off">Pemberitahuan obrolan TIDAK AKTIF</string>
     <string name="chat_with_friends_login">Ngobrol dengan teman.</string>
-    <string name="chat_friends_in_chat">Teman di Chat</string>
-    <string name="chat_friend_in_chat">1 Teman di Chat</string>
+    <string name="friends_in_chat">Teman di Chat</string>
+    <string name="friend_in_chat">1 Teman di Chat</string>
     <string name="chats">Obrolan</string>
     <string name="chats_public">Obrolan Umum</string>
     <string name="chats_public_search">Cari obrolan umum</string>
