--- a/SportsSideKick/app/src/main/res/values-it/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-it/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">Nessuno ha ancora avviato una chat! Perché non essere il primo?</string>
     <string name="chat_public">La chat è PUBBLICA</string>
     <string name="chat_private">La chat è PRIVATA</string>
-    <string name="create_chat">Crea una nuova chat</string>
+    <string name="chat_create">Crea una nuova chat</string>
     <string name="join_chat">Unisciti alla chat</string>
     <string name="single_user_is_typing">%1$s! sta scrivendo…</string>
     <string name="multiple_users_are_typing">Più utenti stanno scrivendo…</string>
     <string name="alerts_on">Notifiche chat ATTIVE</string>
     <string name="alerts_off">Notifiche chat DISATTIVE</string>
     <string name="chat_with_friends_login">Chattare con gli amici.</string>
-    <string name="chat_friends_in_chat">Amici nella chat</string>
-    <string name="chat_friend_in_chat">1 amico nella chat</string>
+    <string name="friends_in_chat">Amici nella chat</string>
+    <string name="friend_in_chat">1 amico nella chat</string>
     <string name="chats">Chat</string>
     <string name="chats_public">Chat pubbliche</string>
     <string name="chats_public_search">Cerca chat pubbliche</string>
