--- a/SportsSideKick/app/src/main/res/values-pl/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pl/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">Jeszcze nikt nie zaczął rozmowy! Może ty spróbujesz?</string>
     <string name="chat_public">Ten czat jest PUBLICZNY</string>
     <string name="chat_private">Ten czat jest PRYWATNY</string>
-    <string name="create_chat">Stwórz nowy czat</string>
+    <string name="chat_create">Stwórz nowy czat</string>
     <string name="join_chat">Dołącz do czatu</string>
     <string name="single_user_is_typing">%1$s! pisze…</string>
     <string name="multiple_users_are_typing">Wielu użytkowników pisze…</string>
     <string name="alerts_on">Powiadomienia z czatu WŁ.</string>
     <string name="alerts_off">Powiadomienia z czatu WYŁ.</string>
     <string name="chat_with_friends_login">Pogawędka ze znajomymi.</string>
-    <string name="chat_friends_in_chat">Przyjaciele na czacie</string>
-    <string name="chat_friend_in_chat">1 Przyjaciel na czacie</string>
+    <string name="friends_in_chat">Przyjaciele na czacie</string>
+    <string name="friend_in_chat">1 Przyjaciel na czacie</string>
     <string name="chats">Czaty</string>
     <string name="chats_public">Czaty publiczne</string>
     <string name="chats_public_search">Przeszukaj czaty publiczne</string>
