--- a/SportsSideKick/app/src/main/res/values-pt/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pt/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">Ainda niguem começou a conversar! Porque não seres o primeiro?</string>
     <string name="chat_public">Esta conversa é PÚBLICA</string>
     <string name="chat_private">Esta conversa é PRIVADA</string>
-    <string name="create_chat">Criar nova conversa</string>
+    <string name="chat_create">Criar nova conversa</string>
     <string name="join_chat">Entrar no Chat</string>
     <string name="single_user_is_typing">%1$s! está digitando…</string>
     <string name="multiple_users_are_typing">Vários usuários estão digitando…</string>
     <string name="alerts_on">Alertas do Chat ligados</string>
     <string name="alerts_off">Alertas do Chat desligados</string>
     <string name="chat_with_friends_login">Chat com amigos.</string>
-    <string name="chat_friends_in_chat">Amigos no bate-papo</string>
-    <string name="chat_friend_in_chat">1 amigo no bate-papo</string>
+    <string name="friends_in_chat">Amigos no bate-papo</string>
+    <string name="friend_in_chat">1 amigo no bate-papo</string>
     <string name="chats">Chats</string>
     <string name="chats_public">Chats Públicos</string>
     <string name="chats_public_search">Procurar Chats Públicos</string>
