--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">Пока еще никто не начал чат! Почему бы не начать вам?</string>
     <string name="chat_public">Это ОТКРЫТЫЙ чат</string>
     <string name="chat_private">Это ЗАКРЫТЫЙ чат</string>
-    <string name="create_chat">Создать новый чат</string>
+    <string name="chat_create">Создать чат</string>
     <string name="join_chat">Вступить в чат</string>
     <string name="single_user_is_typing">%1$s! печатает…</string>
     <string name="multiple_users_are_typing">Несколько пользователей печатают…</string>
     <string name="alerts_on">Уведомления чата: ВКЛ</string>
     <string name="alerts_off">Уведомления чата: ВЫКЛ</string>
     <string name="chat_with_friends_login">Общайтесь с друзьями</string>
-    <string name="chat_friends_in_chat">Друзья в чате</string>
-    <string name="chat_friend_in_chat">1 Друг в чате</string>
+    <string name="friends_in_chat">Друзья в чате</string>
+    <string name="friend_in_chat">1 Друг в чате</string>
     <string name="chats">Чаты</string>
     <string name="chats_public">Открытые чаты</string>
     <string name="chats_public_search">Искать открытые чаты</string>
