--- a/SportsSideKick/app/src/main/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-zh/strings.xml
@@ -164,15 +164,15 @@
     <string name="no_message_text">还没人开始聊天！为何不率先创建？</string>
     <string name="chat_public">聊天室已公开</string>
     <string name="chat_private">聊天室未公开</string>
-    <string name="create_chat">创建新聊天</string>
+    <string name="chat_create">创建新聊天</string>
     <string name="join_chat">加入聊天</string>
     <string name="single_user_is_typing">%1$s 在打字…</string>
     <string name="multiple_users_are_typing">多个用户正在输入…</string>
     <string name="alerts_on">聊天提示打开</string>
     <string name="alerts_off">聊天提示打开</string>
     <string name="chat_with_friends_login">跟朋友聊天。</string>
-    <string name="chat_friends_in_chat">聊天中的朋友</string>
-    <string name="chat_friend_in_chat">1位朋友在聊天</string>
+    <string name="friends_in_chat">聊天中的朋友</string>
+    <string name="friend_in_chat">1位朋友在聊天</string>
     <string name="chats">聊天</string>
     <string name="chats_public">公共聊天室</string>
     <string name="chats_public_search">搜索公共聊天室</string>
