--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -146,7 +146,7 @@
     <string name="more">المزيد</string>
     <string name="friend_you_and">الأصدقاء، وأنت، و </string>
     <string name="have_in_common"> تشتركون بـ:</string>
-    <string name="what_would_you_like_to_do">Che cosa vuoi fare?</string>
+    <string name="what_would_you_like_to_do" />
 
     <!--Chat-->
     <string name="members">أفراد</string>
