--- a/SportsSideKick/app/src/main/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-de/strings.xml
@@ -146,7 +146,7 @@
     <string name="more">Mehr</string>
     <string name="friend_you_and">Gemeinsame Freunde von dir und </string>
     <string name="have_in_common"> :</string>
-    <string name="what_would_you_like_to_do">Che cosa vuoi fare?</string>
+    <string name="what_would_you_like_to_do" />
 
     <!--Chat-->
     <string name="members">leden</string>
