--- a/SportsSideKick/app/src/main/res/values-pt/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pt/strings.xml
@@ -146,7 +146,7 @@
     <string name="more">Mais</string>
     <string name="friend_you_and">Amigos que </string>
     <string name="have_in_common"> que tens em comum:</string>
-    <string name="what_would_you_like_to_do">Che cosa vuoi fare?</string>
+    <string name="what_would_you_like_to_do" />
 
     <!--Chat-->
     <string name="members">Membros</string>
