--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -146,7 +146,7 @@
     <string name="more">Еще</string>
     <string name="friend_you_and">Общие друзья </string>
     <string name="have_in_common"> у вас и :</string>
-    <string name="what_would_you_like_to_do">Che cosa vuoi fare?</string>
+    <string name="what_would_you_like_to_do" />
 
     <!--Chat-->
     <string name="members">Члены</string>
